fixing that code is not aligned to the right

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
@@ -214,6 +214,10 @@ $media-border-content: 1px solid rgba(0, 0, 0, 0.1);
 
 .media-field-toolbar {
     display:flex;
+    
+    code {
+        flex-grow:1;
+    }
 }
 
 .selected-media-label {
